闭包-滚动加载

--- a/闭包-滚动加载/index.html
+++ b/闭包-滚动加载/index.html
@@ -31,9 +31,9 @@
       border-bottom: 1px solid lightgray;
     }
   </style>
-  <script src="./bower_components/mockjs/dist/mock.js"></script>
-  <script src="./bower_components/axios/dist/axios.js"></script>
-  <script src="./bower_components/vue/dist/vue.js"></script>
+  <script src="../bower_components/mockjs/dist/mock.js"></script>
+  <script src="../bower_components/axios/dist/axios.js"></script>
+  <script src="../bower_components/vue/dist/vue.js"></script>
   <script>
     const url = 'http://localhost:9999/table';
     Mock.mock(url, {
